Note recent updates to slurm code

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,8 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.3.0-pre5 (NOT TAGGED OR BUILT YET)
+* Changes in SLURM 0.3.0-pre5
 =============================
+ -- Fixes for reported problems:
+   - slurm/346: Support multiple colon-separated PluginDir values
  -- Fix node state transition: DOWN to DRAINED (instead of DRAINING)
  -- Fix a couple of minor slurmctld memory leaks
 
