--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,11 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.0.0-pre6 (NOT TAGGED YET)
+===============================
+ -- Switch plugin added. Add "SwitchType=switch/elan" to slurm.conf for 
+    systems with Quadrics Elan3 or Elan4 switches.
+
 * Changes in SLURM 0.3.0.0-pre5
 ===============================
  -- Fixes for reported problems:
