Fix a couple of formatting problems.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -153,7 +153,7 @@ Specify a name for the job. The specified name will appear along with
 the job id number when querying running jobs on the system. The default
 is the supplied \fBexecutable\fR program's name.
 .TP
-\fB\-\-mpi\R=\fImpi_type\fR
+\fB\-\-mpi\fR=\fImpi_type\fR
 Identify the type of MPI to be used. May result in unique initiation 
 procedures.
 .RS
@@ -212,7 +212,7 @@ initiated.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 verbose operation. Multiple \fB-v\fR's will further increase the verbosity of
-.B srun. By default only errors will be displayed.
+\fBsrun\fR. By default only errors will be displayed.
 .TP
 \fB\-d\fR, \fB\-\-slurmd-debug\fR=\fIlevel\fR
 Specify a debug level for slurmd(8). \fIlevel\fR may be an integer value
