Fix typo and duplicate entry in NEWS.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,13 +1,16 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.0.0-pre7 (not tagged yet)
+===============================
+
 * Changes in SLURM 0.3.0.0-pre6
 ===============================
  -- Fixes for reported problems:
    - slurm/372: job state descriptions added to squeue man page
  -- Switch plugin added. Add "SwitchType=switch/elan" to slurm.conf for 
     systems with Quadrics Elan3 or Elan4 switches.
- -- Don't tread DOWN nodes with too few CPUs as a fatal error on Elan
+ -- Don't treat DOWN nodes with too few CPUs as a fatal error on Elan
  -- Major re-write of html documents
  -- Updates to node pinging for large numbers of unresponsive nodes 
  -- Explicitly set default action for SIGTERM (action on Thunder was 
@@ -19,8 +22,6 @@ documents those changes that are of interest to users and admins.
     that state is non-responsiveness and "ReturnToService=1" configuration
  -- Partition processor count now correctly computed for heterogeneous 
     clusters with FastSchedule configured off
- -- Only return DOWN nodes to service if the reason for them being in 
-    that state is non-responsiveness and ReturnToService configured on
  -- New macros and function to export SLURM version number
 
 * Changes in SLURM 0.3.0.0-pre5
