--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 0.3.0.0-pre7 (not tagged yet)
 ===============================
  -- Add support for getting node's real memory size on AIX
+ -- Sinfo sort partitions in slurm.conf order, new sort option ("#P")
 
 * Changes in SLURM 0.3.0.0-pre6
 ===============================
