--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -1,4 +1,4 @@
-.TH "slurm.conf" "5" "January 2004" "Morris Jette" "Slurm configuration file"
+.TH "slurm.conf" "5" "February 2004" "Morris Jette" "Slurm configuration file"
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
@@ -22,6 +22,8 @@ components.
 Acceptable values at present include "auth/none" and "auth/authd".
 The default value is "auth/none", which means the UID included in 
 communication messages is not verified. 
+This may be fine for testing purposes, but 
+\fBdo not use "auth/none" if you desire any security\fR.
 "auth/authd" indicates that Brett Chun's authd is to be used (see
 "http://www.theether.org/authd/" for more information).
 All SLURM daemons and commands must be restarted for a change in 
