--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -120,7 +120,8 @@ The default value is "jobcomp/none", which means that upon job completion
 the record of the job is purged from the system. 
 The value "jobcomp/filetxt" indicates that a record of the job should be 
 written to a text file specified by the \fBJobCompLoc\fR parameter.
-Slurmctld must be restared for a change in \fBJobCompType\fR to take effect.
+Slurmctld must be reconfigured ("scontrol reconfig" or SIGHUP signal) for 
+a change in \fBJobCompType\fR to take effect.
 .TP
 \fBJobCredentialPrivateKey\fR
 Fully qualified pathname of a file containing a private key used for 
