--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -2,7 +2,7 @@
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
-\fB/etc/slurm.conf\fP is an ASCI file which describes general Slurm configuration 
+\fB/etc/slurm.conf\fP is an ASCI file which describes general SLURM configuration 
 information, the nodes to be managed, information about how those nodes are 
 grouped into partitions, and various scheduling parameters associated with 
 those partitions.  The file location can be modified at system build time using 
@@ -12,7 +12,9 @@ The contents of the file are case insensitive except for the names of nodes
 and partitions. Any text following a "#" in the configuration file is treated 
 as a comment through the end of that line. 
 The size of each line in the file is limited to 1024 characters.
-
+Changes to the configuration file take effect upon restart of 
+SLURM daemons, daemon reciept of the SIGHUP signal, or execution 
+of the command "scontrol reconfigure" unless otherwise noted.
 .LP
 The overall configuration parameters available include:
 .TP
@@ -110,8 +112,6 @@ stopped a debugger. The default value is unlimited (zero).
 Define the location where job completion records are to be logged. 
 The interpretation of this value depends upon the logging mechanism 
 specified by the \fBJobCompType\fR parameter. 
-Slurmctld must be reconfigured ("scontrol reconfig" or SIGHUP signal)
-for a change in \fBJobCompLoc\fR to take effect.
 .TP
 \fBJobCompType\fR
 Define the job completion logging mechanism type.
@@ -120,8 +120,6 @@ The default value is "jobcomp/none", which means that upon job completion
 the record of the job is purged from the system. 
 The value "jobcomp/filetxt" indicates that a record of the job should be 
 written to a text file specified by the \fBJobCompLoc\fR parameter.
-Slurmctld must be reconfigured ("scontrol reconfig" or SIGHUP signal) for 
-a change in \fBJobCompType\fR to take effect.
 .TP
 \fBJobCredentialPrivateKey\fR
 Fully qualified pathname of a file containing a private key used for 
@@ -191,10 +189,8 @@ Identifies the type of scheduler to be used. Acceptable values include
 the default FIFO scheduling, and 
 "sched/wiki" for the Wiki interface to the Maui Scheduler. 
 The default value is "sched/builtin".
-Slurmctld must be restared for a change in \fBSchedulerType\fR to 
-take effect.
-In addition, when initially setting the value to "sched/wiki" 
-all pending jobs must have their priority set to zero (held).
+When initially setting the value to "sched/wiki", any pending jobs 
+must have their priority set to zero (held).
 When changing the value from "sched/wiki", all pending jobs 
 should have their priority change from zero to some large number.
 The \fBscontrol\fR command can be used to change job priorities.
@@ -260,7 +256,8 @@ Fully qualified pathname of a directory into which the \fBslurmd\fR
 daemon's state information and batch job script information are written. This
 must be a common pathname for all nodes, but should represent a directory which
 is local to each node (reference a local file system). The default value
-is "/var/spool/slurmd." \fBNOTE\fR: This directory is also used to store \fBslurmd\fR's
+is "/var/spool/slurmd." \fBNOTE\fR: This directory is also used to store
+\fBslurmd\fR's
 shared memory lockfile, and \fBshould not be changed\fR unless the system
 is being cleanly restarted. If the location of \fBSlurmdSpoolDir\fR is
 changed and \fBslurmd\fR is restarted, the new daemon will attach to a
@@ -281,7 +278,8 @@ If any slurm daemons terminate abnormally, their core files will also be written
 into this directory.
 .TP
 \fBSwitchType\fR
-Identifies the type of switch or interconnect used for application communications. 
+Identifies the type of switch or interconnect used for application
+communications. 
 Acceptable values include
 "switch/none" for switches not requiring special processing for job launch 
 or termination (Myrinet, Ethernet, and InfiniBand),
@@ -294,7 +292,8 @@ value of \fBSwitchType\fR, records of all jobs in any state may be lost.
 .TP
 \fBTmpFS\fR
 Fully qualified pathname of the file system available to user jobs for 
-temporary storage. This parameter is used in establishing a node's \fBTmpDisk\fR space. 
+temporary storage. This parameter is used in establishing a node's \fBTmpDisk\fR
+space. 
 The default value is "/tmp".
 .TP
 \fBWaitTime\fR
