--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -194,6 +194,8 @@ must have their priority set to zero (held).
 When changing the value from "sched/wiki", all pending jobs 
 should have their priority change from zero to some large number.
 The \fBscontrol\fR command can be used to change job priorities.
+The \fBslurmctld\fR daemon must be restarted for a change in 
+scheduler type to become effective.
 .TP
 \fBSlurmUser\fR
 The name of the user that the \fBslurmctld\fR daemon executes as. 
@@ -285,9 +287,9 @@ Acceptable values include
 or termination (Myrinet, Ethernet, and InfiniBand),
 "switch/elan" for Quadrics Elan 3 or Elan 4 interconnect.
 The default value is "switch/none".
-All SLURM daemons and running jobs must be restared for a change in 
-\fBSwitchType\fR to take effect.
-If running jobs exist at the time slurmctld is restarted with a new 
+All SLURM daemons, commands and running jobs must be restared for a 
+change in \fBSwitchType\fR to take effect.
+If running jobs exist at the time \fBslurmctld\fR is restarted with a new 
 value of \fBSwitchType\fR, records of all jobs in any state may be lost.
 .TP
 \fBTmpFS\fR
