--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -28,8 +28,9 @@ This may be fine for testing purposes, but
 \fBdo not use "auth/none" if you desire any security\fR.
 "auth/authd" indicates that Brett Chun's authd is to be used (see
 "http://www.theether.org/authd/" for more information).
-All SLURM daemons and commands must be restarted for a change in 
-\fBAuthType\fR to take effect (SLURM jobs can be preserved).
+All SLURM daemons and commands must be terminated prior to changing 
+the value of \fBAuthType\fR and later restarted (SLURM jobs can be 
+preserved).
 .TP
 \fBBackupAddr\fR
 Name that \fBBackupController\fR should be referred to in 
