Change ClusterWorld paper from MISC/web page entry type to conference proceeding.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -68,7 +68,7 @@
 @MISC
 {
     Jette2002, 
-    AUTHOR      = {Moe A. Jette and others},
+    AUTHOR      = {M. Jette and others},
     TITLE       = {{Survey of Batch/Resource Management Related System Software}},
     HOWPUBLISHED= {{Lawrence Livermore National Laboratory}},
     YEAR	= {2002},
@@ -102,13 +102,15 @@
     YEAR        = {2003},
 }
 
-@MISC
+@CONFERENCE
 {
     SLURM2003, 
-    AUTHOR      = {{Lawrence Livermore National Laboratory}},
+    AUTHOR      = {M. Jette and M. Grondona},
     TITLE       = {{SLURM: Simple Linux Utility for Resource Management}},
-    HOWPUBLISHED= {http://www.llnl.gov/linux/slurm/},
+    BOOKTITLE   = {Proceedings of ClusterWorld 2003},
+    ADDRESS     = {San Jose, CA},
     YEAR        = {2003},
+    NOTE        = {Available from http://www.llnl.gov/linux/slurm/},
 }
 
 @CONFERENCE
