The ControllerMachine will periodcally tell the BackupController machine to reliquish control. This is necessary since a temporary network problem can result in the BackupController becoming the primary server even while the server on the ControllerMachine continues execution. While this event is impossible to prevent, the new code restores proper operation when communications are restored. (gnats:387)

--- a/branches/slurm-0-2-22-bugfixes/NEWS
+++ b/branches/slurm-0-2-22-bugfixes/NEWS
@@ -1,6 +1,11 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.24 (not yet tagged)
+=========================
+ -- Fixes for reported problems:
+   - slurm/387: Jobs lost and nodes DOWN on slurmctld restart
+
 * Changes in SLURM 0.2.23
 =========================
  -- Fixes for reported problems:
