--- a/branches/slurm-0-2-branch/NEWS
+++ b/branches/slurm-0-2-branch/NEWS
@@ -1,10 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.2.23
+* Changes in SLURM 0.2.24
 =========================
  -- Fixes for reported problems:
-   - slurm/381: Hold jobs requesting more resources than partition limit.
+   - slurm/387: Jobs lost and nodes DOWN on slurmctld restart
  -- Nodes no longer transition from COMPLETING to DOWN when not responding.
     Instead, slurmctld either waits for positive verification of job
 	completion, or an administrator must explicitly set the node DOWN.
@@ -14,6 +14,13 @@ documents those changes that are of interest to users and admins.
     no longer running.
  -- Export only required symbols from libslurm.so. 
  -- Added job and node state descriptions to the squeue and sinfo man pages
+
+* Changes in SLURM 0.2.23
+========================
+ -- Fixes for reported problems:
+   - slurm/381: Hold jobs requesting more resources than partition limit.
+
+
 
 * Changes in SLURM 0.2.22
 =========================
