Jobs not presently runnable due to partition constraints and task count (but not node count) with node list will have their priority reset to 1 and permit newer runnable jobs to run. This handles case not previously handled in the previous patch for this bug. (gnats:381)

--- a/branches/slurm-0-2-branch/NEWS
+++ b/branches/slurm-0-2-branch/NEWS
@@ -1,6 +1,12 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.25
+=========================
+ -- Fixes for reported problems:
+   - slurm/381: Hold jobs requesting more resources than partition limit.
+     (patch to fix in version 0.2.23 for certain combination of srun options).
+
 * Changes in SLURM 0.2.24
 =========================
  -- Fixes for reported problems:
