--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -26,6 +26,7 @@ documents those changes that are of interest to users and admins.
  -- Added job and node state descriptions to the squeue and sinfo man pages
  -- Backup slurmctld to generate core file on SIGABRT
  -- Backup slurmctld to re-read slurm.conf on SIGHUP
+ -- Added -q,--quit-on-interrupt option to srun.
 
 * Changes in SLURM 0.3.0.0-pre6
 ===============================
