--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -226,6 +226,12 @@ all remaining tasks. The default value is unlimited. This can be useful to
 insure that a job is terminated in a timely fashion in the event that one 
 or more tasks terminate prematurely.
 .TP
+\fB\-q\fR, \fB\-\-quit-on-interrupt\fR
+Quit immediately on single SIGINT (Ctrl-C). Use of this option
+disables the status feature normally available when \fBsrun\fR receives 
+a single Ctrl-C and causes \fBsrun\fR to instead immediately terminate the
+running job.
+.TP
 \fB\-\-uid\fR=\fIuser\fR
 If
 .B srun
