--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,7 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.3.0.0-pre7 (not tagged yet)
+* Changes in SLURM 0.3.0.0-pre8 (not tagged yet)
+===============================
+
+* Changes in SLURM 0.3.0.0-pre7
 ===============================
  -- Fixes for reported problems:
    - slurm/381: Hold jobs requesting more resources than partition limit.
