--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,10 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.0.0-pre8 (not tagged yet)
 ===============================
+ -- Queue outgoing message traffic rather than immediately spawning 
+    pthreads (under heavy load this resulted in hundreds of pthreads 
+    using more memory than was available).
+ -- Restructure slurmctld message agent for higher throughput.
 
 * Changes in SLURM 0.3.0.0-pre7
 ===============================
