--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,9 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.0.0-pre9 (not tagged yet)
+===============================
+
 * Changes in SLURM 0.3.0.0-pre8
 ===============================
  -- Queue outgoing message traffic rather than immediately spawning 
