--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -1,4 +1,4 @@
-.TH "slurm.conf" "5" "February 2004" "Morris Jette" "Slurm configuration file"
+.TH "slurm.conf" "5" "March 2004" "Morris Jette" "Slurm configuration file"
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
@@ -273,9 +273,10 @@ The default value is 300 seconds.
 A value of zero indicates the node should never be set DOWN if not respnding.
 .TP
 \fBStateSaveLocation\fR
-Fully qualified pathname of a directory into which the slurm controller, 
-\fBslurmctld\fR, saves its state (e.g. "/usr/local/slurm/checkpoint"). SLURM 
-state will saved here to recover from system failures. 
+Fully qualified pathname of a directory into which the SLURM controller, 
+\fBslurmctld\fR, saves its state (e.g. "/usr/local/slurm/checkpoint"). 
+SLURM state will saved here to recover from system failures.
+\fBSlurmUser\fR must be able to create files in this directory. 
 The default value is "/tmp".
 If any slurm daemons terminate abnormally, their core files will also be written 
 into this directory.
