--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -51,66 +51,100 @@ The default is to print information in a partition-oriented format.
 This is ignored if the \fB\-\-format\fR option is specified.
 .TP
 \fB\-o <output_format>\fR, \fB\-\-format=<output_format>\fR
-Specify the information to be displayed.  
-The default format is "%9P %5a %.9l %.5D %6t %N".
-If the \fB\-\-summarize\fR option is specified, the default 
-format is "%9P %5a %.9l %15F %N".
-If the \fB\-\-long\fR option is specified, the default format is 
-"%9P %5a %.9l %.8s %4r %5h %10g %.5D %11T %N". 
-If the \fB\-\-Node\fR option is specified, the default format is 
-"%#N %.5D %9P %6t". 
-If the \fB\-\-Node\fR and \fB\-\-long\fR options are both specified, 
-the default format is "%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f %R".
-In the above two formats the value of "#" represents the maximum 
+Specify the information to be displayed using an \fBsinfo\fR
+format string. Format strings transparently used by \fBsinfo\fR
+when running with various options are
+.RS
+.TP 6
+.I "default"
+"%9P %5a %.9l %.5D %6t %N"
+.TP 
+.I "--summarize"
+"%9P %5a %.9l %15F %N"
+.TP 
+.I "--long"
+"%9P %5a %.9l %.8s %4r %5h %10g %.5D %11T %N"
+.TP
+.I "--Node"
+"%#N %.5D %9P %6t"
+.TP
+.I "--long --Node"
+"%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f %R"
+.RE
+
+In the above format strings the use of "#" represents the maximum 
 length of an node list to be printed.
 
 The field specifications available include: 
-.br
-\fB%a\fR State/availability of a partition
-.br
-\fB%A\fR Number of nodes by state in the format "allocated/idle". 
+.RS
+.TP 4
+\fB%a\fR 
+State/availability of a partition
+.TP
+\fB%A\fR 
+Number of nodes by state in the format "allocated/idle". 
 Do not use this with a node state option ("%t" or "%T") or 
 the different node states will be placed on separate lines.
-.br
-\fB%c\fR Number of CPUs per node
-.br
-\fB%d\fR Size of temporary disk space per node in megabytes
-.br
-\fB%D\fR Number of nodes
-.br
-\fB%f\fR Features associated with the nodes
-.br
-\fB%F\fR Number of nodes by state in the format "allocated/idle/other/total". 
+.TP
+\fB%c\fR 
+Number of CPUs per node
+.TP
+\fB%d\fR 
+Size of temporary disk space per node in megabytes
+.TP
+\fB%D\fR 
+Number of nodes
+.TP
+\fB%f\fR 
+Features associated with the nodes
+.TP
+\fB%F\fR 
+Number of nodes by state in the format "allocated/idle/other/total". 
 Do not use this with a node state option ("%t" or "%T") or 
 the different node states will be placed on separate lines.
-.br
-\fB%g\fR Groups which may use the nodes
-.br
-\fB%h\fR Jobs may share nodes, "yes", "no", or "force"
-.br
-\fB%l\fR Maximum time for any job in the format "days:hours:minutes:seconds"
-.br
-\fB%m\fR Size of memory per node in megabytes
-.br
-\fB%N\fR List of node names
-.br
-\fB%P\fR Partition name
-.br
-\fB%r\fR Only user root may initiate jobs, "yes" or "no"
-.br
-\fB%R\fR The reason a node is unavailable (down, drained, or draining states)
-.br
-\fB%s\fR Maximum job size in nodes
-.br
-\fB%t\fR State of nodes, compact form
-.br
-\fB%T\fR State of nodes, extended form
-.br
-\fB%w\fR Scheduling weight of the nodes
-.br
-\fB%.<*>\fR right justification of the field
-.br 
-\fB%<Number><*>\fR size of field
+.TP
+\fB%g\fR 
+Groups which may use the nodes
+.TP
+\fB%h\fR 
+Jobs may share nodes, "yes", "no", or "force"
+.TP
+\fB%l\fR 
+Maximum time for any job in the format "days:hours:minutes:seconds"
+.TP
+\fB%m\fR 
+Size of memory per node in megabytes
+.TP
+\fB%N\fR 
+List of node names
+.TP
+\fB%P\fR 
+Partition name
+.TP
+\fB%r\fR 
+Only user root may initiate jobs, "yes" or "no"
+.TP
+\fB%R\fR 
+The reason a node is unavailable (down, drained, or draining states)
+.TP
+\fB%s\fR 
+Maximum job size in nodes
+.TP
+\fB%t\fR 
+State of nodes, compact form
+.TP
+\fB%T\fR 
+State of nodes, extended form
+.TP
+\fB%w\fR 
+Scheduling weight of the nodes
+.TP
+\fB%.<*>\fR 
+right justification of the field
+.TP
+\fB%<Number><*>\fR 
+size of field
+.RE
 .TP
 \fB\-r\fR, \fB\-\-responding\fR
 If set only report state information for responding nodes.
