--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -1,7 +1,7 @@
 .TH SINFO "1" "March 2004" "sinfo 0.3" "Slurm components"
 
 .SH "NAME"
-sinfo \- Used to view information about Slurm nodes and partitions.
+sinfo \- view information about SLURM nodes and partitions.
 
 .SH "SYNOPSIS"
 \fBsinfo\fR [\fIOPTIONS\fR...] 
@@ -21,11 +21,11 @@ Print a brief message listing the \fBsinfo\fR options.
 If set only report state information for non-responding (dead) nodes.
 .TP
 \fB\-e\fR, \fB\-\-exact\fR
-If set, do not group node information on multiple nodes unless their 
-configurations to be reported are identical. Otherwise cpu count, 
-memory size, and disk space for nodes will be listed with the minimum 
-value followed by a "+" for nodes with the same partition and state 
-(e.g., "250+").
+If set, do not group node information on multiple nodes unless
+their configurations to be reported are identical. Otherwise
+cpu count, memory size, and disk space for nodes will be listed
+with the minimum value followed by a "+" for nodes with the
+same partition and state (e.g., "250+").
 .TP
 \fB\-h\fR, \fB\-\-noheader\fR
 Do not print a header on the output.
@@ -41,9 +41,8 @@ This is ignored if the \fB\-\-format\fR option is specified.
 \fB\-n <nodes>\fR , \fB\-\-nodes=<nodes>\fR
 Print information only about the specified node(s). 
 Multiple nodes may be comma separated or expressed using a 
-node range expression.
-For example "linux[00-07]" would indicate eight nodes, "linux00" 
-through "linux07".
+node range expression. For example "linux[00-07]" would 
+indicate eight nodes, "linux00" through "linux07."
 .TP
 \fB\-N\fR , \fB\-\-Node\fR
 Print information in a node-oriented format.
@@ -70,10 +69,13 @@ when running with various options are
 .TP
 .I "--long --Node"
 "%#N %.5D %9P %11T %.4c %.6m %.8d %.6w %8f %R"
+.TP
+.I "--list-reasons"
+"%35R %N"
 .RE
 
-In the above format strings the use of "#" represents the maximum 
-length of an node list to be printed.
+In the above format strings the use of "#" represents the
+maximum length of an node list to be printed.
 
 The field specifications available include: 
 .RS
@@ -82,8 +84,8 @@ The field specifications available include:
 State/availability of a partition
 .TP
 \fB%A\fR 
-Number of nodes by state in the format "allocated/idle". 
-Do not use this with a node state option ("%t" or "%T") or 
+Number of nodes by state in the format "allocated/idle".
+Do not use this with a node state option ("%t" or "%T") or
 the different node states will be placed on separate lines.
 .TP
 \fB%c\fR 
@@ -99,9 +101,10 @@ Number of nodes
 Features associated with the nodes
 .TP
 \fB%F\fR 
-Number of nodes by state in the format "allocated/idle/other/total". 
-Do not use this with a node state option ("%t" or "%T") or 
-the different node states will be placed on separate lines.
+Number of nodes by state in the format
+"allocated/idle/other/total".  Do not use this with a node
+state option ("%t" or "%T") or the different node states will
+be placed on separate lines.
 .TP
 \fB%g\fR 
 Groups which may use the nodes
@@ -149,6 +152,17 @@ size of field
 \fB\-r\fR, \fB\-\-responding\fR
 If set only report state information for responding nodes.
 .TP
+\fB\-R\fR, \fB--list-reasons\fR
+List reasons nodes are down or drained. When nodes are in
+these states SLURM supports optional inclusion of a "reason"
+string by an administrator. This option will display the first
+35 characters of the reason field and list of nodes with that
+reason for all nodes that are, by default, down, drained, or
+draining. This option may be used with other node filtering
+options (e.g. \fB\-r\fR, \fB\-d\fR, \fB\-t\fR, \fB\-n\fR),
+however, combinations of these options that result in a list of
+nodes that are not down or drained will not produce any output.
+.TP
 \fB\-s\fR , \fB\-\-summarize\fR
 List only a partition state summary with no node state details.
 This is ignored if the \fB\-\-format\fR option is specified.
@@ -156,33 +170,30 @@ This is ignored if the \fB\-\-format\fR option is specified.
 \fB\-S <sort_list>\fR , \fB\-\-sort=<sort_list>\fR
 Specification of the order in which records should be reported.
 This uses the same field specifciation as the <output_format>.
-Multiple sorts may be performed by listing multiple sort fields 
-separated by commas.
-The field specifications may be preceeded by "+" or "-" for 
-assending (default) and desending order respectively.
-The partition field specification, "P", may be preceeded by 
-a "#" to report partitions in the same order that they 
-appear in SLURM's  configuration file, \fBslurm.conf\fR.  
-For example, a sort value of "+P,-m" requests that records be 
-printed in order of increasing partition name and within a 
-partition by decreasing memory size.
-The default value of sort is "#P,-t" (partitions ordered as 
-configured then decreasing node state).
-If the "--Node" option is selected, the default sort value is 
-"N" (increasing node name). 
+Multiple sorts may be performed by listing multiple sort fields
+separated by commas.  The field specifications may be preceeded
+by "+" or "-" for assending (default) and desending order
+respectively.  The partition field specification, "P", may be
+preceeded by a "#" to report partitions in the same order that
+they appear in SLURM's  configuration file, \fBslurm.conf\fR.
+For example, a sort value of "+P,-m" requests that records
+be printed in order of increasing partition name and within a
+partition by decreasing memory size.  The default value of sort
+is "#P,-t" (partitions ordered as configured then decreasing
+node state).  If the \fB--Node\fB option is selected, the
+default sort value is "N" (increasing node name).
 .TP
-\fB\-t <state>\fR , \fB\-\-states=<states>\fR
-List nodes only having the given state(s).
-Multiple states may be comma separated and the comparison is case 
-insensitive. 
-Possible values include: ALLOC, ALLOCATED, COMP, 
-COMPLETING, DOWN, DRAIN, DRAINED, DRAINING, IDLE, UNK, and UNKNOWN.
-A "*" suffix may be appended to any of these states to search for 
-nodes in the specified state which are not responding.
-By default nodes in the specified state are reported whether they are 
-responding or not.
-Also note the \fB\-\-dead\fR and \fB\-\-responding\fR options for
-filtering nodes by state.
+\fB\-t <states>\fR , \fB\-\-states=<states>\fR
+List nodes only having the given state(s).  Multiple states
+may be comma separated and the comparison is case insensitive.
+Possible values include (case insensitive): ALLOC, ALLOCATED,
+COMP, COMPLETING, DOWN, DRAIN, DRAINED, DRAINING, IDLE, UNK,
+and UNKNOWN.  A "*" suffix may be appended to any of these
+states to search for nodes in the specified state which are
+not responding.  By default nodes in the specified state are
+reported whether they are responding or not.  Also note the
+\fB\-\-dead\fR and \fB\-\-responding\fR options for filtering
+nodes by state.
 .TP
 \fB\-p <partition>\fR, \fB\-\-partition=<partition>\fR
 Print information only about the specified partition.  
@@ -193,27 +204,29 @@ Provide detailed event logging through program execution.
 \fB\-V\fR , \fB\-\-version\fR
 Print version information and exit.
 
-.SH "OUTPUT"
+.SH "OUTPUT FIELD DESCRIPTIONS"
 .TP
 \fBAVAIL\fR
-Partition state, \fBup\fR or \fBdown\fR.
+Partition state: \fBup\fR or \fBdown\fR.
 .TP
 \fBCPUS\fR
 Count of CPUs (processors) on these nodes.
 .TP
 \fBGROUPS\fR
-Resource allocations in this partition are restricted to the named groups.
-\fBall\fR indicates that all groups may use this partition.
+Resource allocations in this partition are restricted to the
+named groups.  \fBall\fR indicates that all groups may use
+this partition.
 .TP
 \fBJOB_SIZE\fR
-Minimum and maximum node count that can be allocated to any user job. 
-A single number indicates the minimum and maximum node count are the 
-same.
-\fBinfinite\fR is used to identify partitions without a maximum node count.
+Minimum and maximum node count that can be allocated to any
+user job.  A single number indicates the minimum and maximum
+node count are the same.  \fBinfinite\fR is used to identify
+partitions without a maximum node count.
 .TP
 \fBTIMELIMIT\fR
-Maximum time limit for any user job in days:hours:minutes:seconds.
-\fBinfinite\fR is used to identify partitions without a job time limit.
+Maximum time limit for any user job in
+days:hours:minutes:seconds.  \fBinfinite\fR is used to identify
+partitions without a job time limit.
 .TP
 \fBMEMORY\fR
 Size of real memory in megabytes on these nodes.
@@ -225,7 +238,7 @@ Names of nodes associated with this configuration/partition.
 Count of nodes with this particular configuration.
 .TP
 \fBNODES(A/I)\fR
-Count of nodes with this particular configuration by node 
+Count of nodes with this particular configuration by node
 state in the form "available/idle".
 .TP
 \fBNODES(A/I/O/T)\fR
@@ -233,80 +246,84 @@ Count of nodes with this particular configuration by node
 state in the form "available/idle/other/total".
 .TP
 \fBPARTITION\fR
-Name of a partition. 
-Note that the suffix "*" identifies the default partition.
+Name of a partition.  Note that the suffix "*" identifies the
+default partition.
 .TP
 \fBROOT\fR
-Is the ability to allocate resources in this partition restricted to 
-user root, \fByes\fR or \fBno\fR.
+Is the ability to allocate resources in this partition
+restricted to user root, \fByes\fR or \fBno\fR.
 .TP
 \fBSHARE\fR
-Will jobs allocated resources in this partition share those resources.
-\fBno\fR indicates resources are never shared. 
-\fBforce\fR indicates resources are always available to be shared.
-\fByes\fR indicates resource may be shared or not per job's resource 
-allocation.
+Will jobs allocated resources in this partition share those
+resources.  \fBno\fR indicates resources are never shared.
+\fBforce\fR indicates resources are always available to be
+shared.  \fByes\fR indicates resource may be shared or not
+per job's resource allocation.
 .TP
 \fBSTATE\fR
-State of the nodes. Possible states include: down, unknown, idle, allocated, 
-drained, draining, completing and their abbreviated forms: down, unk, idle, 
-alloc, drain, drng, and comp respectively. 
-Note that the suffix "*" identifies nodes that are presently not responding.
+State of the nodes. Possible states include: down, unknown,
+idle, allocated, drained, draining, completing and their
+abbreviated forms: down, unk, idle, alloc, drain, drng, and
+comp respectively.  Note that the suffix "*" identifies nodes
+that are presently not responding.
 .TP
 \fBTMP_DISK\fR
 Size of temporary disk space in megabytes on these nodes.
 
 .SH "NODE STATE CODES"
 .PP
-Node state codes are shorted as required for the field size.
-If the node state code is followed by "*", this indicates the node 
-is presently not responding and will not be allocated any new work. 
-If the node remains non-responsive, it will be placed in the \fBDOWN\fR
-state.
+Node state codes are shortened as required for the field size.
+If the node state code is followed by "*", this indicates the
+node is presently not responding and will not be allocated
+any new work.  If the node remains non-responsive, it will
+be placed in the \fBDOWN\fR state (except in the case of
+\fBDRAINED\fR, \fBDRAINING\fR, or \fBCOMPLETING\fR nodes).
 .TP 12
 ALLOCATED
 The node has been allocated to one or more jobs.
 .TP
 COMPLETING
-One or more jobs have been allocated this node and are in the process 
-of COMPLETING. This node state will be left when all of the job's 
-processes have terminated and the SLURM epilog program (if any) has 
-terminated. See the \fBEpilog\fR parameter description in the 
-\fBslurm.conf\fR man page for more information.
+One or more jobs have been allocated this node and are in
+the process of COMPLETING. This node state will be removed when
+all of the job's processes have terminated and the SLURM
+epilog program (if any) has terminated. See the \fBEpilog\fR
+parameter description in the \fBslurm.conf\fR man page for
+more information.
 .TP
 DOWN
-The node is unavailable for use. SLURM can automatically place nodes 
-in this state if some failure occurs. System administrators may also 
-explicitly place nodes in this state. If a node resumes normal operation, 
-SLURM can automatically return it to service. See the \fBReturnToService\fR 
-and \fBSlurmdTimeout\fR parameter descriptions in the \fBslurm.conf\fR(5) 
-man page for more information.
+The node is unavailable for use. SLURM can automatically
+place nodes in this state if some failure occurs. System
+administrators may also explicitly place nodes in this state. If
+a node resumes normal operation, SLURM can automatically
+return it to service. See the \fBReturnToService\fR
+and \fBSlurmdTimeout\fR parameter descriptions in the
+\fBslurm.conf\fR(5) man page for more information.
 .TP
 DRAINED
-The node is unavailable for use per system administrator request.
-See the \fBupdate node\fR command in the \fBscontrol\fR(1) man page 
-or the \fBslurm.conf\fR(5) man page for more information.
+The node is unavailable for use per system administrator
+request.  See the \fBupdate node\fR command in the
+\fBscontrol\fR(1) man page or the \fBslurm.conf\fR(5) man page
+for more information.
 .TP
 DRAINING
-The node is currently executing a job, but will not be allocated to 
-additional jobs. The node state will be changed to state \fBDRAINED\fR
-when the last job on it completes. Nodes enter this state per system 
-administrator request. See the \fBupdate node\fR command in the 
-\fBscontrol\fR(1) man page or the \fBslurm.conf\fR(5) man page for 
-more information.
+The node is currently executing a job, but will not be allocated
+to additional jobs. The node state will be changed to state
+\fBDRAINED\fR when the last job on it completes. Nodes enter
+this state per system administrator request. See the \fBupdate
+node\fR command in the \fBscontrol\fR(1) man page or the
+\fBslurm.conf\fR(5) man page for more information.
 .TP
 IDLE
 The node is not allocated to any jobs and is available for use.
 .TP
 UNKNOWN
-The SLURM controller has just started and the node's state has not 
-yet been determined. 
+The SLURM controller has just started and the node's state
+has not yet been determined.
 
-.SH "ENVIRONMENT VARIABLES"
-.PP
-Some \fBsinfo\fR options may be set via environment variables. These 
-environment variables, along with their corresponding options, are listed 
-below. (Note: Commandline options will always override these settings.)
+.SH "ENVIRONMENT VARIABLES" .PP Some \fBsinfo\fR options may
+be set via environment variables. These environment variables,
+along with their corresponding options, are listed below. (Note:
+Commandline options will always override these settings.)
 .TP 20
 SINFO_FORMAT
 \fB\-o <output_format>, \-\-format=<output_format>\fR
@@ -320,80 +337,66 @@ SINFO_SORT
 .SH "EXAMPLES"
 .eo
 Report basic node and partition configurations:
-.br
+
+.nf
+
 > sinfo
-.br
 PARTITION AVAIL TIMELIMIT NODES STATE  NODELIST
-.br
 batch     up     infinite     2 alloc  adev[8-9]
-.br
 batch     up     infinite     6 idle   adev[10-15]
-.br
 debug*    up        30:00     8 idle   adev[0-7]
-.br
+
+.fi
  
-.br
 Report partition summary information:
-.br
+.nf
+
 > sinfo -s
-.br
 PARTITION AVAIL TIMELIMIT NODES(A/I/O/T) NODELIST
-.br
 batch     up     infinite 2/6/0/8        adev[8-15]
-.br
 debug*    up        30:00 0/8/0/8        adev[0-7]
-.br
+
+.fi
  
-.br
 Report more complete information about the partition debug:
-.br
+.nf
+
 > sinfo --long --partition=debug
-.br
 PARTITION AVAIL TIMELIMIT JOB_SIZE ROOT SHARE GROUPS NODES STATE NODELIST
-.br
 debug*    up        30:00        8 no   no    all        8 idle  dev[0-7]
-.br
+.fi
 
-.br
 Report only those nodes that are in state DRAINED:
-.br
+.nf
+
 > sinfo --states=drained
-.br
 PARTITION AVAIL NODES TIMELIMIT STATE  NODELIST
-.br
 debug*    up        2     30:00 drain  adev[6-7]
-.br
 
-.br
+.fi
+
 Report node-oriented information with details and exact matches:
-.br
-> sinfo -Nel
-.br
-NODELIST    NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES REASON
-.br
-adev[0-1]       2 debug*    idle      2   3448    38536     16 (null)   (null)
-.br
-adev[2,4-7]     5 debug*    idle      2   3384    38536     16 (null)   (null)
-.br
-adev3           1 debug*    idle      2   3394    38536     16 (null)   (null)
-.br
-adev[8-9]       2 batch     allocated 2    246    82306     16 (null)   (null)
-.br
-adev[10-15]     6 batch     idle      2    246    82306     16 (null)   (null)
-.br
+.nf
 
-.br
+> sinfo -Nel
+NODELIST    NODES PARTITION STATE  CPUS MEMORY TMP_DISK WEIGHT FEATURES REASON
+adev[0-1]       2 debug*    idle      2   3448    38536     16 (null)   (null)
+adev[2,4-7]     5 debug*    idle      2   3384    38536     16 (null)   (null)
+adev3           1 debug*    idle      2   3394    38536     16 (null)   (null)
+adev[8-9]       2 batch     allocated 2    246    82306     16 (null)   (null)
+adev[10-15]     6 batch     idle      2    246    82306     16 (null)   (null)
+
+.fi
+
 Report only down, drained and draining nodes and their reason field:
-.br
-> sinfo --states=down,drained,draining --sort=N --format="%12N %9T %R"
-.br
-NODELIST     STATE     REASON
-.br
-dev[12,18]   DRAINED   power supply, ETA Dec25
-.br
-dev45        DOWN*     (null)
-.br
-dev123       DRAINED   memory, ETA Nov24
+.nf
+
+> sinfo -R
+REASON                              NODELIST
+Memory errors                       dev[0,5]
+Not Responding                      dev8
+
+.fi
 .ec
 
 .SH "COPYING"
