o Also document -l used with -R

--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -162,6 +162,8 @@ draining. This option may be used with other node filtering
 options (e.g. \fB\-r\fR, \fB\-d\fR, \fB\-t\fR, \fB\-n\fR),
 however, combinations of these options that result in a list of
 nodes that are not down or drained will not produce any output.
+When used with \fB\-l\fR the output additionally includes
+the current node state.
 .TP
 \fB\-s\fR , \fB\-\-summarize\fR
 List only a partition state summary with no node state details.
