--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,8 +1,15 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.3.0.0-pre9 (not tagged yet)
+* Changes in SLURM 0.3.0.0-pre10 (not tagged yet)
+================================
+
+* Changes in SLURM 0.3.0.0-pre9
 ===============================
+ -- Restructure how slurmctld state saves are performed for better 
+    scalability.
+ -- New sinfo option "--list-reason" or "-R". Displays down or drained 
+    nodes along with their REASON field.
 
 * Changes in SLURM 0.3.0.0-pre8
 ===============================
