--- a/trunk/doc/man/man8/slurmctld.8
+++ b/trunk/doc/man/man8/slurmctld.8
@@ -1,4 +1,4 @@
-.TH SLURMCTLD "8" "September 2003" "slurmctld 0.2" "Slurm components"
+.TH SLURMCTLD "8" "March 2004" "slurmctld 0.3" "Slurm components"
 .SH "NAME"
 slurmctld \- The central management daemon of Slurm.
 .SH "SYNOPSIS"
@@ -22,7 +22,7 @@ reason field for those nodes.
 Debug mode. Execute \fBslurmctld\fR in the foreground with logging to stdout. 
 .TP
 \fB\-f <file>\fR
-Read configuration from the specified file.
+Read configuration from the specified file. See \fBNOTES\fR below.
 .TP
 \fB\-h\fR
 Help; print a brief summary of command options.
@@ -35,9 +35,9 @@ Verbose operation. Multiple \fB-\v\fR's increase verbosity.
 
 .SH "NOTES"
 It may be useful to experiment with different \fBslurmctld\fR specific 
-configuration parameters using a distinct configuration file. However, 
-this special configuration file will not be used by \fBslurmd\fR daemon 
-or the Slurm programs. If you desire changing communication ports, 
+configuration parameters using a distinct configuration file (e.g. timeouts). 
+However, this special configuration file will not be used by \fBslurmd\fR 
+daemon or the Slurm programs. If you desire changing communication ports, 
 the location of the temporary file system, or other parameters used 
 by other Slurm components, change the common configuration file, 
 \fBslurm.conf\fR.
