--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,10 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.0.0-pre10 (not tagged yet)
 ================================
+ -- Fix bugs in support of slurmctld "-f" option (specify different 
+    slurm.conf pathname)
+ -- Remove slurmd "-f"
+ -- Several documenation changes for slurm administrators
 
 * Changes in SLURM 0.3.0.0-pre9
 ===============================
